[package]
name = "sensor-scd30"
description = "SCD30 environmental sensor driver"
repository = "https://github.com/ryankurte/rust-sensor-scd30"
keywords = ["embedded", "embedded-hal", "scd30", "sensor", "i2c"]
version = "0.4.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
util = [ "clap", "linux-embedded-hal", "simplelog", "humantime" ]
default = [ "util" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "1.0.0" }
linux-embedded-hal = { version = "0.4.0", optional = true }

log = "0.4.8"
clap = { version = "4.2.1", features = [ "derive", "env" ], optional = true }
simplelog = { version = "0.5.3", optional = true }
humantime = { version = "2.1.0", optional = true }

[dev-dependencies]
color-backtrace = "0.6.1"
embedded-hal-mock = "0.11.1"
assert_approx_eq = "1.1.0"


[[bin]]
name = "scd30-util"
path = "src/main.rs"
required-features = ["util"]

